--- a/src/static/css/pages/_skills.scss
+++ b/src/static/css/pages/_skills.scss
@@ -84,7 +84,7 @@
   left: 0;
   font-weight: _font(weight-bold);
   font-size: 0.85em;
-  color: #fff;
+  color: _palette(bg);
   background: _palette(accent);
   height: 100%;
   min-width: 110px;
